syntax = "proto3";
package apipb.v1;

option go_package = "./;apipbv1";

message UserGetParams {}

message UserUpdateParams {
  optional string email = 1;
  optional string name = 2;
  optional string password = 3;
  optional string password_new = 4;
}

message User {
  string id = 1;
  string email = 2;
  string name = 3;
  optional string avatar_url = 4;
}

message UserResponse { User user = 1; }

service UserService {
  rpc get_user(UserGetParams) returns (UserResponse);
  rpc update_user(UserUpdateParams) returns (UserResponse);
}
